2012-09-02  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42295
	* g++.dg/opt/pr42295.C: New test.


2012-09-01  Jakub Jelinek  <jakub@redhat.com>

	PR target/54436
	* gcc.dg/torture/pr54436.c: New test.

2012-09-01  Andrew Pinski  <apinski@cavium.com>

	* gcc.target/mips/truncate-8.c: New testcase.

2012-09-01  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46829
	PR target/46843
	* gcc.target/i386/pr46829.c: New test.
	* gcc.target/i386/pr46843.c: Ditto.

2012-08-31  Paolo Carlini  <paolo.carlini@oracle.com>
	    Jason Merrill  <jason@redhat.com>

	PR c++/18747
	* g++.dg/parse/error50.C: New.

2012-08-31  Jakub Jelinek  <jakub@redhat.com>

	PR c/54428
	* gcc.c-torture/compile/pr54428.c: New test.

2012-08-31  Ollie Wild  <aaw@google.com>

	PR c++/54197
	* g++.dg/init/lifetime3.C: New test.

2012-08-31  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/54409
	* gcc.dg/torture/pr54409.c: New test.

2012-08-31  Martin Jambor  <mjambor@suse.cz>

	* gfortran.dg/pr48636.f90: Add dump scan checks.

2012-08-29  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/mips.exp: Work out default -msynci setting.

2012-08-28  Joey Ye  <joey.ye@arm.com>

	* gcc.dg/tree-ssa/ssa-dom-thread-3.c: Add -fno-short-enums.

2012-08-27  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46254
	* gcc.target/i386/pr46254.c: New test.

2012-08-27  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/ext_ins.c, gcc.target/mips/octeon-pop-2.c,
	gcc.target/mips/pr54240.c, gcc.target/mips/stack-1.c,
	gcc.target/mips/unaligned-1.c: Add NOMIPS16.

2012-08-27  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/20020620-1.c, gcc.target/mips/atomic-memory-2.c,
	gcc.target/mips/branch-2.c, gcc.target/mips/branch-3.c,
	gcc.target/mips/clear-cache-1.c, gcc.target/mips/const-anchor-1.c,
	gcc.target/mips/const-anchor-2.c, gcc.target/mips/dspr2-MULT.c,
	gcc.target/mips/dspr2-MULTU.c, gcc.target/mips/ext-1.c,
	gcc.target/mips/ext-2.c, gcc.target/mips/ext-3.c,